Closed Bug 1038655 Opened 9 years ago Closed 9 years ago

Intermittent test_playback_rate.html | Current time should not change when playbackRate is null (2.333 2.000045).

Categories

(Core :: Audio/Video, defect)

ARM
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34
Tracking Status
firefox32 --- unaffected
firefox33 --- fixed
firefox34 --- fixed
firefox-esr24 --- unaffected
firefox-esr31 --- unaffected
b2g-v1.4 --- unaffected
b2g-v2.0 --- unaffected
b2g-v2.1 --- fixed

People

(Reporter: cbook, Assigned: jwwang)

References

()

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Android 4.0 Panda mozilla-inbound debug test mochitest-3 on 2014-07-15 02:22:55 PDT for push ebf6185fafce

slave: panda-0224

https://tbpl.mozilla.org/php/getParsedLog.php?id=43811144&tree=Mozilla-Inbound



1238 INFO TEST-UNEXPECTED-FAIL | /tests/content/media/test/test_playback_rate.html | Current time should not change when playbackRate is null (2.333 2.000045).
2.333 - 2.00045 = 0.33255 > THRESHOLD = 0.3...
a close failure...
Don't update official playback position when paused as we did while seeking. Also update the test case as now we can expect |currentTime| won't change at all after paused (or playbackRate set to 0).

Try on B2G desktop: https://tbpl.mozilla.org/?tree=Try&rev=a6e9ab0727a6
Try on Android: https://tbpl.mozilla.org/?tree=Try&rev=23f901c88665
Try on desktop: https://tbpl.mozilla.org/?tree=Try&rev=90f95886d9b6
Try on B2G emulator: https://tbpl.mozilla.org/?tree=Try&rev=ac92f1e1f893

No failures in test_playback_rate.html.
Assignee: nobody → jwwang
Status: NEW → ASSIGNED
Attachment #8460048 - Flags: review?(cpearce)
Attachment #8460048 - Flags: review?(cpearce) → review+
https://hg.mozilla.org/mozilla-central/rev/ce74b3c2bf5a
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
Please nominate this for Aurora uplift when you get a chance :)
Comment on attachment 8460048 [details] [diff] [review]
1038655_fix_currentTime_null_playbackRate.patch

Approval Request Comment
[Feature/regressing bug #]:unknown
[User impact if declined]:
declined software quality for less test coverage
[Describe test coverage new/current, TBPL]:
tested on Try: https://tbpl.mozilla.org/?tree=Try&rev=b87a7f254e7e
The oranges are inherited even without this patch applied
[Risks and why]: low, the change is simple and has been well tested
[String/UUID change made/needed]:none
Attachment #8460048 - Flags: approval-mozilla-aurora?
Attachment #8460048 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.