Bug 1038655 - Don't update official playback position when paused. r=cpearce, a=sledru